TestSuite/errors/err0211.pas
function abs(self1: integer): integer; extensionmethod;
begin
  Result := PABCSystem.Abs(self);
end;
begin
  
end.